# DataViz-LLM

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/source/: conf.py  data_transformation.rst
src/dataviz_project/: Claude_chat_responses.py  Gemini_chat_responses.py  app.py  data_transformation.py  data_transformation_page.py  utils.py
tests/: conftest.py  test_handle_duplicates.py  test_handle_missing_values.py  test_handle_outliers.py
