[project]
name = "dataviz-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Meriam-Inoubli",email = "meriam.inoubli@dauphine.tn"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet (>=5.2.0,<6.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "anthropic (>=0.45.2,<0.46.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)"
]

[tool.poetry]
packages = [{include = "dataviz_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
